# blue-ocean

./: .dockerignore  .env  .env.example  .env.prod  .env.thebull  .env.thecongress  .gitignore  AGENTS.md  App.tsx  Dockerfile  EmptyHMRClient.ts  HMRClient.ts  LICENSE  README.md  SHIP_REPORT.md  app.config.js  app.json  babel.config.js  docker-compose.yml  electric.config.json  eslint.config.js  generator.html  global.d.ts  index.js  index.ts  jest.config.js  lychee.toml  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  polyfills.js  polyfills.native.ts  polyfills.web.ts  report.core.md  report.kyc.md  report.md  router-ctx.web.js  tsconfig.bolt.json  tsconfig.jest.json  (+3 more)
.husky/: pre-commit
agents/: admin-agent.ts  cart-agent.ts  categories-agent.ts  chat-agent.ts  delivery-agent.ts  moderation-agent.ts  notifications-agent.ts  orders-agent.ts  products-agent.ts  reputation-service.ts  review-agent.ts  settings-agent.ts  stores-agent.ts  users-agent.ts
app/: +html.tsx  +not-found.tsx  _layout.tsx  categories.tsx  driver-dashboard.tsx  index.tsx  landing.tsx  orders.tsx  ping.tsx  probe.tsx  profile.tsx  signup.tsx  signupLogic.ts
bolt-mirror/: .boltignore  package.json  tsconfig.bolt.json  tsconfig.json
components/: AdminBulkUploader.tsx  AdminChatList.tsx  AdminNotificationBanner.tsx  AgeVerificationModal.tsx  AuroraSphere.tsx  AuthContext.tsx  AuthModalContext.tsx  AuthTabsModal.tsx  BannerFormModal.tsx  BulkProductUploader.tsx  CachedImage.tsx  Card.tsx  (+45 more)
contracts/marketplace/: Cargo.toml  build.sh
contracts/marketplace/src/: lib.rs
(+1306 files in other folders)
