[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
name = "marketplace"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
panic = "abort"
debug = false
